2001-06-11  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-slashdot-jp.el (shimbun-make-contents):
	Call `shimbun-make-mime-article'.
	* shimbun/sb-hns.el (shimbun-article): Ditto.

	* shimbun/shimbun.el (toplevel): Require 'mel.
	(shimbun-base64-encode-string): New function.
	(shimbun-suffix-content-type-alist): New constant.
	(shimbun-encapsulate-article): New variable.
	(shimbun-make-mime-article): New function.
	(shimbun-make-html-contents): Call `shimbun-make-mime-article'.

	* shimbun/sb-asahi.el (shimbun-asahi-expiration-days): Changed
	default value as 6.

	* shimbun/sb-asahi-html.el (shimbun-asahi-html-expiration-days):
	New variable.

2001-06-11  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-dump-head-source-command-argument): Its old name is
	`w3m-dump-head-source-command-arguments'.

2001-06-11  Mito  <mit@nines.nec.co.jp>

	* w3m.el (w3m-broken-proxy-cache): New variable.
	(w3m-dump-head-source-command-arguments): Defined as list.
	(w3m-w3m-retrieve): Cache on proxy server isn't used when neither
	`no-cache' nor `w3m-broken-proxy-cache' equal to nil.

2001-06-10  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-w3m-dev.el: Remove comment.
	(shimbun-w3m-dev-coding-system): Change iso-2022-jp to euc-jp.

	* shimbun/sb-vinelinux.el: New file.

2001-06-10  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-form.el (w3m-form-parse-region): Check the value of
	`w3m-current-buffer' to avoid wrong type argument error.

	* w3m.el (w3m-rendering-region): Set `w3m-current-buffer' refered
	in `w3m-form-parse-region'.

2001-06-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-attributes): Remove URL fragments before checking
	its attributes.
	(w3m-retrieve): Remove URL fragments before getting its contents.
	(w3m-w3m-retrieve): Follow changes in `w3m-retrieve'.
	(w3m-arrived-add): Simplified regular expression.
	(w3m-parse-attributes): Changed form spec for edebug.
